--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poster-server",
   "version": "0.0.0",
-  "type": "module", 
+  "type": "module",
   "private": true,
   "scripts": {
     "start": "node app.js"
@@ -9,6 +9,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "express": "^4.19.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "sqlite3": "^5.1.7"
   }
 }
