--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,9 @@
     "@apollo/server": "^4.10.4",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
-    "sqlite3": "^5.1.7"
+    "knex": "^3.1.0",
+    "moment": "^2.30.1",
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1"
   }
 }
