--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "apollo-server-express": "^3.13.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "moment": "^2.30.1",
     "sqlite3": "^5.1.7",
